<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" 
    >
    <ImageView
        android:id="@+id/iv_goods"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_266"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/white"
        />
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
	    >
	    <TextView
	        android:id="@+id/tv_goods_title"
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/goods_title"
        	android:textSize="@dimen/tv_64"
        	android:textColor="@color/tv_goods_title"
        	android:layout_marginTop="@dimen/margin_20"
	        />
	    <TextView
	        android:id="@+id/tv_goods_content"
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/goods_content"
        	android:maxLines="2"
        	android:textColor="@color/tv_goods_content"
        	android:textSize="@dimen/tv_52"
        	android:layout_marginTop="@dimen/margin_20"	        
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
	    >
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	    	>
			<LinearLayout
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
			    >
			    <TextView
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="拼团购买: ¥"
			        android:textSize="@dimen/tv_46"	
			        android:textColor="@color/tv_orange"
			        android:layout_marginTop="@dimen/margin_10"        
			        />
			    <TextView
			        android:id="@+id/tv_team_price"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/team_price"
			        android:textSize="@dimen/tv_46"	
			        android:textColor="@color/tv_orange"
					android:layout_marginTop="@dimen/margin_10"   
			        />
				<TextView
					android:id="@+id/tv_team_way"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/team_way"
					android:textSize="@dimen/tv_46"	
					android:textColor="@color/white"
					android:layout_marginTop="@dimen/margin_10"
					android:layout_marginLeft="@dimen/margin_10" 
					android:background="@color/btn_bg_green"
			/>

			</LinearLayout>
			<LinearLayout
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginBottom="@dimen/margin_10"
			    >
			    <TextView
				    android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="市场价: ¥"
			        android:textSize="@dimen/tv_43"	
			        android:textColor="@color/tv_market_price"
			        android:layout_marginTop="@dimen/margin_10"        
			        />
			    <TextView
			        android:id="@+id/tv_market_price"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/marker_price"
			        android:textSize="@dimen/tv_43"	
			        android:textColor="@color/tv_market_price"
			        android:layout_marginTop="@dimen/margin_10"   
			        />
			    

			</LinearLayout>
		</LinearLayout>

		

		<Button
		    android:id="@+id/bt_team_buy"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/team_buy"
			android:textColor="@color/white"
			android:background="@color/btn_bg_orange"
			android:layout_marginLeft="@dimen/margin_10"
		    />
	</LinearLayout>
</LinearLayout>
