<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/more_title_h"
        android:background="@color/white">

        <Button
            android:id="@+id/bt_return"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/btn_back"
            android:onClick="click"
            android:text="返回"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/addresstitle"
            android:textColor="@color/green_title"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/consignee"
                    android:textColor="@color/text_color_primary_dark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/clientname"
                    android:singleLine="true"
                    android:textColor="@color/tv_cafe"
                    android:textColorHint="@color/text_color_hint_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contactphone"
                    android:textColor="@color/text_color_primary_dark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/telormobile"
                    android:singleLine="true"
                    android:textColor="@color/text_color_primary_dark"
                    android:textColorHint="@color/text_color_hint_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />


            <LinearLayout
                android:id="@+id/tr_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_province"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="16dp"
                    android:text="@string/province"
                    android:textColor="@color/tv_black"
                    android:textSize="16sp" />


                <Spinner
                    android:id="@+id/sp_province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <LinearLayout
                android:id="@+id/tr_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="16dp"
                    android:text="@string/mycity"
                    android:textColor="@color/tv_black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sp_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <LinearLayout
                android:id="@+id/tr_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_county"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="16dp"
                    android:text="@string/zone"
                    android:textColor="@color/tv_black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sp_county"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detailedaddress"
                    android:textColor="@color/text_color_primary_dark"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_myaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/mydaddress"
                    android:maxLines="3"
                    android:textColor="@color/text_color_primary_dark"
                    android:textColorHint="@color/text_color_hint_dark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zipcode"
                    android:textColor="@color/tv_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_zipzone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/zipcode"
                    android:inputType="number"
                    android:maxLines="3"
                    android:textColor="@color/text_color_primary_dark"
                    android:textColorHint="@color/text_color_hint_dark"
                    android:textSize="16sp" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/normal_bg" />

            <Button
                android:id="@+id/bt_saveaddress"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/btn_green"
                android:onClick="click"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>